feat: 랭킹 시스템 상품 삭제 처리 및 점수 계산 리팩토링
Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>